Databases now show up based on user

--- a/templates/view_database.html
+++ b/templates/view_database.html
@@ -7,7 +7,7 @@
     aria-labelledby="exampleModalLabel"
     aria-hidden="true"
   >
-  <!-- Modal -->
+  <!--Add Modal -->
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
