--- a/templates/databases.html
+++ b/templates/databases.html
@@ -8,7 +8,7 @@
     aria-labelledby="exampleModalLabel"
     aria-hidden="true"
   >
-  <!-- Modal -->
+  <!--Add Database Modal -->
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
@@ -38,6 +38,13 @@
             <div class="mb-3">
               <label for="message-text" class="col-form-label"></label>Description</label>
               <textarea class="form-control" id="database-description" name="Description"></textarea>
+            </div>
+            <!--userid-->
+            <div class="mb-3">
+              <label for="message-text">Database Owner: {{user.username}}</label>
+              <input type="hidden" name="userid" value="{{userid}}">
+              <br>
+              <br>
             </div>
             <button type="submit" class="btn btn-primary">Add Database</button>
             <button
