--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -27,6 +27,7 @@ input:focus {
 
 .brownbackground {
     background-color: #4a3015;
+    border-radius: 5%;
 }
 
 .corkbackground {
@@ -72,15 +73,14 @@ input:focus {
 }
 
 .idealcar {
-    height: 100%;
+    scale: 100%;
     max-height:200px ;
     min-height: 110px;
-    width: 100%;
     max-width:360px ;
     min-width: 300px;
-    object-fit: cover;
+    object-fit: contain;
     border: solid;
-    border-color: black;
+    border-color: grey;
     border-radius: 5%;
 }
 
@@ -96,7 +96,7 @@ input:focus {
     padding: 5px;
 }
 
-.background {
+.greybackground {
     background-color: #acacac;
     border-radius: 5%;
 }
@@ -122,6 +122,7 @@ input:focus {
 
 .bluebackground {
     background-color: #0d11ff;
+    border-radius: 5%;
 }
 
 .custom-bg:hover {
