Worked on CSS, format and changed quiz to quiz_questions

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en" class="blackbackground">
+<html lang="en" class="blackbackground" style="font-size: 100%;">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -97,20 +97,6 @@
                         </ul>
                     </li>
                 </ul>
-
-
-
-                <!--Search Function-->
-                <form class="d-flex" action = "/search" method = "POST" role="search">
-                    <input
-                        name = "name"
-                        class="form-control me-2"
-                        type="search"
-                        placeholder="Search..."
-                        aria-label="Search"
-                    />
-                    <button class="btn btn-outline-success" type="submit" >Search</button>
-                </form>
             </div>
         </div>
     </nav>
