--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -39,9 +39,13 @@ input:focus {
 }
 
 .othercenter {
+    justify-content: center;
+    align-items: center;
     position: absolute;
     width: 400px;
+    max-width: 400px;
     height: 150px;
+    max-height: 150px;
     z-index: 15;
     top: 50%;
     left: 50%;
