--- a/templates/quiz_answers.html
+++ b/templates/quiz_answers.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} {% block title %}Home{% endblock %}{% block content %}
 
-<div class="whitetext othercenter" style="position:absolute; text-align:center; margin-top:-500px;">
+<div class="whitetext othercenter" style="position:absolute; text-align:center; margin-top:-250px; padding-bottom:500px;">
     <h2><u>Ideal Vehicle Quiz Results</u></h2>    
 
         <p><b>Place of Residence:</b> {{Residence}}<br>
