Reformatted quiz_answers

--- a/templates/databases.html
+++ b/templates/databases.html
@@ -43,6 +43,7 @@
             <div class="mb-3">
               <label for="message-text">Database Owner: {{user.username}}</label>
               <input type="hidden" name="userid" value="{{userid}}">
+              <input type="hidden" name="ActiveUser" value="{{ActiveUser}}">
               <br>
               <br>
             </div>
