--- a/templates/menu.html
+++ b/templates/menu.html
@@ -8,7 +8,7 @@
             class="green-btn btn-primary btn" 
             style="margin-bottom: 10px"
             href="{{url_for('signin', userid=userid)}}" 
-            role="button">Log In</a>
+            role="button">Sign In</a>
             <br>
             <a 
             class="green-btn btn-primary btn" 
