--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -21,6 +21,13 @@ input:focus {
 
 }
 
+.imagecenter {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -60%)
+}
+
 .blackbackground {
     background-color: #222224;
 }
@@ -77,6 +84,7 @@ input:focus {
 }
 
 .idealcar {
+    display:inline-block;
     scale: 100%;
     max-height:200px ;
     min-height: 110px;
@@ -187,8 +195,4 @@ input:focus {
 .cardtext {
     color: white;
     text-align: center;
-}
-
-.card-text {
-    color: black;
 }
