--- a/templates/edit_user.html
+++ b/templates/edit_user.html
@@ -6,7 +6,7 @@
 <input type="hidden" name="ActiveUser" value="{{user.username}}">
 <input type="hidden" name="userid" value="{{user.id}}">
 
-
+<div class="whitetext center" style="position:absolute; text-align:center; margin-top:-75px">
   <!--Image-->
   <div class="mb-3">
     <label for="image" class="form-label">Image URL</label>
@@ -24,5 +24,5 @@
     <input class="form-control" id="database-description" name="Password" value=""/>
   </div>
   <button type="submit" class="btn btn-primary">Save Edits</button>
-
+</div>
 {%endblock%}
