--- a/templates/edit_vehicle.html
+++ b/templates/edit_vehicle.html
@@ -6,6 +6,7 @@
 <input type="hidden" name="ActiveUser" value="{{user.username}}">
 <input type="hidden" name="userid" value="{{user.id}}">
 
+<div class="whitetext center" style="position:absolute; text-align:center; margin-top:-125px; padding-bottom:400px">
   <!--Image-->
   <div class="mb-3">
     <label for="image" class="form-label">Image URL</label>
@@ -74,10 +75,11 @@
     <label for="message-text" class="col-form-label">Previous Issues</label>
     <input class="form-control" id="previous-issues" name="PreviousIssues" value="{{vehicle.previousissues}}"/>
   </div>
-  <div class="mb-3"></div>
+  <div class="mb-3">
     <label for="message-text" class="col-form-label">Current Issues</label>
     <input class="form-control" id="current-issues" name="CurrentIssues" value="{{vehicle.currentissues}}"/>
   </div>
   <button type="submit" class="btn btn-primary">Save Edits</button>
+</div>
 
 {%endblock%}
